[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Level3.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/parallaxBg.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Base.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemies/eWalker.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/RedSkull.tscn" type="PackedScene" id=7]

[node name="Level3" type="Node"]
script = ExtResource( 1 )
needed_to_win = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 1046 )

[node name="parallaxBg" parent="." instance=ExtResource( 3 )]

[node name="TileMap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 2097153, 536870913, 0, 2097154, 536870913, 0, 2097160, 1, 0, 2097161, 1, 0, 2097196, 536870913, 0, 2097197, 536870913, 0, 2097202, 1, 0, 2097218, 1, 0, 2097223, 536870913, 0, 2097224, 1, 0, 2097225, 1, 0, 2097253, 536870913, 0, 2097254, 1, 0, 2097264, 1, 0, 2097265, 1, 0, 2097285, 1, 0, 2097286, 1, 0, 2097287, 1, 0, 2097296, 536870913, 0, 2097312, 1, 0, 2097320, 1, 0, 2097330, 1, 0, 2097331, 1, 0, 2097333, 1, 0, 2162688, 536870914, 0, 2162689, 536870914, 0, 2162690, 536870914, 0, 2162691, 536870914, 0, 2162692, 536870914, 0, 2162693, 536870914, 0, 2162694, 536870914, 0, 2162695, 536870914, 0, 2162696, 536870914, 0, 2162697, 536870914, 0, 2162698, 536870914, 0, 2162699, 536870914, 0, 2162700, 536870914, 0, 2162701, 536870914, 0, 2162702, 536870914, 0, 2162703, 536870914, 0, 2162704, 536870914, 0, 2162705, 536870914, 0, 2162706, 536870914, 0, 2162707, 536870914, 0, 2162708, 536870914, 0, 2162709, 536870914, 0, 2162710, 536870914, 0, 2162711, 536870914, 0, 2162712, 536870914, 0, 2162713, 536870914, 0, 2162714, 536870914, 0, 2162715, 536870914, 0, 2162716, 536870914, 0, 2162717, 536870914, 0, 2162718, 536870914, 0, 2162719, 536870914, 0, 2162720, 536870914, 0, 2162721, 536870914, 0, 2162722, 536870914, 0, 2162723, 536870914, 0, 2162724, 536870914, 0, 2162725, 536870914, 0, 2162726, 536870914, 0, 2162727, 536870914, 0, 2162728, 536870914, 0, 2162729, 536870914, 0, 2162730, 536870914, 0, 2162731, 536870916, 0, 2162732, 536870916, 0, 2162733, 536870916, 0, 2162734, 536870914, 0, 2162735, 536870914, 0, 2162736, 536870914, 0, 2162737, 536870914, 0, 2162738, 536870916, 0, 2162739, 536870914, 0, 2162740, 536870914, 0, 2162741, 536870914, 0, 2162742, 536870914, 0, 2162743, 536870914, 0, 2162744, 536870914, 0, 2162745, 536870914, 0, 2162746, 536870914, 0, 2162747, 536870914, 0, 2162748, 536870914, 0, 2162749, 536870914, 0, 2162750, 536870914, 0, 2162751, 536870914, 0, 2162752, 536870914, 0, 2162753, 536870914, 0, 2162754, 536870914, 0, 2162755, 536870914, 0, 2162756, 536870914, 0, 2162757, 536870916, 0, 2162758, 536870914, 0, 2162759, 536870914, 0, 2162760, 536870914, 0, 2162761, 536870914, 0, 2162762, 536870914, 0, 2162763, 536870914, 0, 2162764, 536870914, 0, 2162765, 536870914, 0, 2162766, 536870914, 0, 2162767, 536870914, 0, 2162768, 536870914, 0, 2162769, 536870914, 0, 2162770, 536870914, 0, 2162771, 536870916, 0, 2162772, 536870914, 0, 2162773, 536870914, 0, 2162774, 536870914, 0, 2162775, 536870914, 0, 2162776, 536870914, 0, 2162777, 536870914, 0, 2162778, 536870914, 0, 2162779, 536870914, 0, 2162780, 536870914, 0, 2162781, 536870914, 0, 2162782, 536870914, 0, 2162783, 536870914, 0, 2162784, 536870916, 0, 2162785, 536870916, 0, 2162786, 536870914, 0, 2162787, 536870914, 0, 2162788, 536870914, 0, 2162789, 536870914, 0, 2162790, 536870914, 0, 2162791, 536870914, 0, 2162792, 536870914, 0, 2162793, 536870914, 0, 2162794, 536870914, 0, 2162795, 536870914, 0, 2162796, 536870914, 0, 2162797, 536870914, 0, 2162798, 536870914, 0, 2162799, 536870914, 0, 2162800, 536870914, 0, 2162801, 536870914, 0, 2162802, 536870914, 0, 2162803, 536870916, 0, 2162804, 536870916, 0, 2162805, 536870916, 0, 2162806, 536870916, 0, 2162807, 536870916, 0, 2162808, 536870916, 0, 2162809, 536870914, 0, 2162810, 536870914, 0, 2162811, 536870914, 0, 2162812, 536870914, 0, 2162813, 536870914, 0, 2162814, 536870914, 0, 2162815, 536870914, 0, 2162816, 536870914, 0, 2162817, 536870914, 0, 2162818, 536870914, 0, 2162819, 536870914, 0, 2162820, 536870914, 0, 2162821, 536870914, 0, 2162822, 536870914, 0, 2162823, 536870914, 0, 2162824, 536870914, 0, 2162825, 536870914, 0, 2162826, 536870914, 0, 2162827, 536870914, 0, 2162828, 536870914, 0, 2162829, 536870914, 0, 2162830, 536870914, 0, 2162831, 536870914, 0, 2162832, 536870914, 0, 2162833, 536870914, 0, 2162834, 536870914, 0, 2162835, 536870914, 0, 2162836, 536870914, 0, 2162837, 536870914, 0, 2162838, 536870914, 0, 2162839, 536870914, 0, 2162840, 536870914, 0, 2162841, 536870914, 0, 2162842, 536870914, 0, 2162843, 536870914, 0, 2162844, 536870914, 0, 2162845, 536870914, 0, 2162846, 536870914, 0, 2162847, 536870914, 0, 2162848, 536870914, 0, 2162849, 536870914, 0, 2162850, 536870914, 0, 2162851, 536870914, 0, 2162852, 536870914, 0, 2162853, 536870914, 0, 2162854, 536870914, 0, 2162855, 536870914, 0, 2162856, 536870914, 0, 2162857, 536870914, 0, 2162858, 536870914, 0, 2162859, 536870914, 0, 2162860, 536870914, 0, 2162861, 536870914, 0, 2162862, 536870914, 0, 2162863, 536870914, 0, 2162864, 536870914, 0, 2162865, 536870914, 0, 2162866, 536870914, 0, 2162867, 536870914, 0, 2162868, 536870914, 0, 2162869, 536870914, 0, 2162870, 536870914, 0, 2162871, 536870914, 0, 2162872, 536870914, 0, 2162873, 536870914, 0, 2162874, 536870914, 0, 2162875, 536870914, 0 )

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Base" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 1025.2 )

[node name="Walker" parent="." instance=ExtResource( 6 )]
position = Vector2( 768, 1015.6 )

[node name="Walker2" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 1031.6 )

[node name="Walker3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1152, 1025.2 )

[node name="Walker4" parent="." instance=ExtResource( 6 )]
position = Vector2( 1536, 1015.6 )

[node name="RedSkull" parent="." instance=ExtResource( 7 )]
position = Vector2( 1961, 800 )
[connection signal="update_mission_status_text" from="." to="Player" method="_on_update_mission_status_text"]
[connection signal="update_score" from="." to="Player" method="_on_update_score"]
[connection signal="timeout" from="spawnTimer" to="." method="_on_spawnTimer_timeout"]
[connection signal="base_entered" from="Base" to="." method="_on_Base_base_entered"]
